# WhiteHouseDefense

./: .gitignore  .~lock.SRD.odt#  CMakeLists.txt  GameLauncher.cpp  GameLauncher.hpp  Makefile  PNJ.cpp  PNJ.hpp  ProjetAnneeUML.vpp  Readme.md  SRD.odt  moneyusecase.vpp  pnjGEstion.vpp  projetAnnee.vpp  projetAnneeClass.vpp  reunion2.txt  reunion3.txt
code/: Account.cpp  Account.h  Account.hpp  AccountServer.cpp  AccountServer.h  AccountServer.hpp  CMakeLists.txt  ChatManager.h  ChatServer.h  ChatUI.h  ClientLauncher.cpp  Command.cpp  Command.hpp  Credentials.cpp  Credentials.h  Database.cpp  Database.h  Database.hpp  Drawing.cpp  FriendList.h  FriendList.hpp  FriendListManager.h  GameLauncher.cpp  GameLauncher.h  GameLauncher.hpp  GameManager.cpp  GameManager.hpp  GameSate.h  GameServer.h  GameUI.h  GameUI.hpp  LoginManager.cpp  LoginManager.h  LoginManager.hpp  LoginRegisterCommand.cpp  LoginRegisterCommand.hpp  LoginUI.cpp  LoginUI.h  LoginUI.hpp  MainManager.cpp  (+53 more)
code/chat-tmp/: ChatManager.hpp  InGameChatUI.hpp  OutGameChatUI.hpp
code/client/: AbstractGUI.hpp  AbstractManager.cpp  AbstractManager.h  AbstractManager.hpp  AbstractUI.cpp  AbstractUI.hpp  App.cpp  App.hpp  ClientLauncher.cpp  Drawing.hpp  FriendList.cpp  FriendList.hpp  FriendListGUI.hpp  FriendListManager.cpp  FriendListManager.hpp  FriendListUI.cpp  FriendListUI.hpp  GameGUI.hpp  GameInfo.cpp  GameInfo.h  GameLauncher.cpp  GameLauncher.hpp  GameManager.cpp  GameManager.hpp  GameUI.cpp  GameUI.hpp  IconLabel.cpp  IconLabel.hpp  InQueueWidget.cpp  LoginGUI.cpp  LoginGUI.hpp  LoginManager.cpp  LoginManager.hpp  LoginUI.cpp  LoginUI.hpp  MainGUI.hpp  MainManager.cpp  MainManager.hpp  MainUI.cpp  MainUI.hpp  (+39 more)
code/client/Abstract/: AbstractConsoleUI.hpp  AbstractGUI.cpp  AbstractGUI.hpp  AbstractManager.cpp  AbstractManager.hpp  AbstractUI.hpp
code/client/FriendList/: FriendList.cpp  FriendListConsoleUI.cpp  FriendListConsoleUI.h  FriendListGUI.cpp  FriendListGUI.hpp  FriendListManager.cpp  FriendListManager.hpp  FriendListUI.hpp
code/client/Game/: GameConsoleUI.cpp  GameConsoleUI.hpp  GameGUI.cpp  GameGUI.hpp  GameInfo.cpp  GameInfo.hpp  GameLauncher.cpp  GameLauncher.hpp  GameManager.cpp  GameManager.hpp  GameUI.cpp  GameUI.hpp  InGameChatWidget.cpp  InGameChatWidget.hpp  QMatchMakingThread.hpp  QMatchmakingThread.cpp
code/client/Login/: LoginConsoleUI.cpp  LoginConsoleUI.hpp  LoginGUI.cpp  LoginGUI.hpp  LoginManager.cpp  LoginManager.hpp  LoginUI.cpp  LoginUI.hpp
code/client/Main/: MainConsoleUI.cpp  MainConsoleUI.hpp  MainGUI.cpp  MainGUI.hpp  MainManager.cpp  MainManager.hpp  MainUI.cpp  MainUI.hpp
code/client/Other/: App.cpp  App.hpp  ClientLauncher.cpp  Drawing.cpp  IconLabel.cpp  IconLabel.hpp  InQueueWidget.cpp  InQueueWidget.hpp  MapGUI.cpp  MapGUI.hpp  NetworkedManager.cpp  NetworkedManager.hpp  QCustomButton.cpp  QHandPointerButton.hpp
code/client/Profile/: ProfileConsoleUI.cpp  ProfileConsoleUI.hpp  ProfileGUI.cpp  ProfileGUI.hpp  ProfileManager.cpp  ProfileManager.hpp  ProfileUI.cpp  ProfileUI.hpp
code/client/Ranking/: RankingConsoleUI.cpp  RankingConsoleUI.hpp  RankingGUI.cpp  RankingGUI.hpp  RankingManager.cpp  RankingManager.hpp  RankingUI.cpp  RankingUI.h  RankingUI.hpp
code/client/Register/: RegisterConsoleUI.cpp  RegisterConsoleUI.hpp  RegisterGUI.cpp  RegisterGUI.hpp  RegisterManager.cpp  RegisterManager.hpp  RegisterUI.cpp  RegisterUI.hpp
code/client/Settings/: IconSelectionWidget.cpp  IconSelectionWidget.hpp  SettingsConsoleUI.cpp  SettingsConsoleUI.hpp  SettingsGUI.cpp  SettingsGUI.hpp  SettingsManager.cpp  SettingsManager.hpp  SettingsUI.hpp
code/client/Spectator/: SpectatorConsoleUI.cpp  SpectatorConsoleUI.hpp  SpectatorGUI.cpp  SpectatorGUI.hpp  SpectatorManager.cpp  SpectatorManager.hpp  SpectatorUI.cpp  SpectatorUI.hpp
code/client/Welcome/: WelcomeConsoleUI.cpp  WelcomeConsoleUI.hpp  WelcomeGUI.cpp  WelcomeGUI.hpp  WelcomeManager.cpp  WelcomeManager.hpp  WelcomeUI.cpp  WelcomeUI.hpp
code/common/: AbstractTower.cpp  AbstractTower.hpp  Account.hpp  AttackTower.cpp  AttackTower.hpp  CommunistPNJ.cpp  CommunistPNJ.h  Constants.h  Constants.hpp  Credentials.cpp  Credentials.hpp  DamageTower.cpp  DamageTower.h  Direction.h  Direction.hpp  GameState.cpp  GameState.hpp  GunTower.cpp  GunTower.hpp  Map.cpp  Map.hpp  Message.cpp  Message.hpp  MexicanPNJ.cpp  MuslimPNJ.cpp  Networking.cpp  Networking.h  PNJ.cpp  PNJ.hpp  PlayerState.cpp  PlayerState.hpp  Position.cpp  Position.hpp  ShockTower.cpp  ShockTower.hpp  SlowTower.cpp  SlowTower.hpp  SniperTower.cpp  SniperTower.hpp  Strings.hpp  (+10 more)
code/common/Gamestate/: GameState.cpp  GameState.hpp  PlayerState.cpp  PlayerState.hpp  Wave.cpp  Wave.hpp
code/common/Npc/: CommunistPNJ.cpp  CommunistPNJ.h  MexicanPNJ.cpp  MexicanPNJ.h  MuslimPNJ.cpp  MuslimPNJ.h  PNJ.cpp  PNJ.hpp
code/common/Other/: Command.cpp  Command.hpp  Constants.hpp  Map.cpp  Map.hpp  Message.cpp  Message.hpp  Networking.cpp  Networking.hpp  Position.cpp  Position.hpp  RankingInfos.hpp  Strings.hpp
code/common/Tower/: AbstractTower.hpp  AttackTower.cpp  AttackTower.hpp  GunTower.cpp  GunTower.hpp  MissileTower.hpp  OneTargetTower.hpp  ShockTower.cpp  ShockTower.hpp  SlowTower.cpp  SniperTower.cpp  SniperTower.hpp
code/common/gamestate/: GameState.cpp  GameState.hpp  PlayerState.cpp  PlayerState.hpp  Wave.cpp  Wave.hpp
code/output/: Client  Server  database (3).db  database.db  server
code/server/: AccountServer.cpp  AccountServer.hpp  Command.cpp  Command.hpp  Database.cpp  Database.hpp  FriendListCommand.cpp  FriendListCommand.h  FriendListCommand.hpp  GameEngine.cpp  GameEngine.hpp  GameServer.cpp  GameServer.hpp  LoginRegisterCommand.cpp  LoginRegisterCommand.hpp  MatchMaker.cpp  MatchMaker.hpp  MatchmakingCommand.cpp  MatchmakingCommand.hpp  PendingMatch.cpp  PendingMatch.h  PlaceTowerCommand.cpp  PlaceTowerCommand.h  PlayerConnection.cpp  PlayerConnection.hpp  Server.cpp  Server.hpp  ServerDebug.cpp  ServerLauncher.cpp  Timer.cpp  Timer.h  TowerCommand.cpp  TowerCommand.h  TowerCommand.hpp  UpdateStatsCommand.cpp  UpdateStatsCommand.h
(+80 files in other folders)
